--- a/index.html
+++ b/index.html
@@ -89,47 +89,92 @@
     <!-- Row Section -->
     <div class="section-color">
       <div class="container">
-        <div class="flex-container">
+        <div class="flex-container section">
 
-          <!-- Section content -->
-          <div class="content1"></div>
-          <div class="content2"></div>
+          <!-- Section content 1 -->
+          <img src="img/item1.svg" alt="image1">
+          <div>
+            <h2>Un luogo a invito<br> con tutto lo<br> spazio<br> necessario per<br> parlare</h2>
+            <p>
+              I server Discord sono organizzati in canali<br> tematici in cui puoi collaborare, condividere o<br> semplicemente parlare della tua giornata<br> senza intasare una chat di gruppo
+            </p>   
+          </div>
+          <!-- End Section -->
+
         </div>
       </div>
     </div>
+    <!-- WAVE -->
+    <img src="img/wave.svg" alt="wave">
 
     <!-- Row Section -->
-    <div class="section-color2">
-      <div class="container">
-        <div class="flex-container">
+      <div class="section-color2">
+        <div class="container">
+          <div class="flex-container section">
   
-          <!-- Section content -->
-          <div class="content2"></div>
-          <div class="content1"></div>
+           <!-- Section content 2 -->
+            <div>
+              <h2>Dove trovarsi è <br> facile</h2>
+              <p>
+                Mettiti comodo in un canale vocale quando<br> hai tempo. Gli amici nel tuo server possono<br>
+                vedere che ei lì e unirsi istantaneamente<br> senza dover chiamare.
+              </p>   
+            </div>
+            <img src="img/item2.svg" alt="image2">
+            <!-- End Section -->
+          </div>
+        </div>
+      </div>
+
+      <!-- WAVE -->
+      <img class="svg-rotation" src="img/wave.svg" alt="wave rotate">
+
+      <!-- Row Section -->
+      <div class="section-color">
+        <div class="container">
+          <div class="flex-container section">
+  
+            <img src="img/item3.svg" alt="image3">
+            <!-- Section content 2 -->
+           <div>
+            <h2>Da pochi a un <br> fandon</h2>
+            <p>
+              Dai inizio a una community di qualsiasi<br>
+              dimensione con strumenti di moderanzione e<br>
+              accesso ai membri personalizzabile.<br>
+              Concedi ai membri poteri speciali, crea<br>
+              canali privati, e molto altro.
+            </p>   
+            </div>
+          <!-- End Section -->
+
         </div>
       </div>
     </div>
 
-    <!-- Row Section -->
-    <div class="section-color">
-      <div class="container">
-        <div class="flex-container">
-
-          <!-- Section content -->
-          <div class="content1"></div>
-          <div class="content2"></div>
-        </div>
-      </div>
-    </div>
+    <!-- WAVE -->
+    <img src="img/wave.svg" alt="wave">   
 
     <!-- Row Section -->
     <div class="section-color2">
-      <div class="container">
-        <div class="flex-container">
+      <div class="container section2">
+      
+        <h2>Tecnologia affidabile per tenersi in contatto</h2>
+        <p>
+          Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. 
+          Fai ciao in video, guarda<br>gli amici giocare in streaming, o riunitevi in una sessione di disegno con la
+          condivisione schermo.
+        </p>
+        
+        <img src="img/item4-big.svg" alt="image4">
 
-          <!-- Section content -->
-          <div class="content3"></div>
+        <div class="text-bg">
+          <span>Pronto a iniziare la tua avventura?</span>
         </div>
+        <a href="#" class="button downlod-button2" > 
+          <i class="fa-solid fa-down-long"></i> 
+          Scarica per Mac
+        </a>
       </div>
     </div>
   </main>
