--- a/index.html
+++ b/index.html
@@ -187,7 +187,16 @@
         <div class="flex-container">
   
           <!-- Section content --> 
-          <div class="content4"></div>
+          <div>
+            <ul class="main-footer">
+              <li><h3>Il tuo posto per <br> parlare</h3></li>
+              <li>
+                <img src="img/ita.png" alt="bandiera italiana">
+                <span>italiano</span>  
+                <i class="fa-solid fa-angle-down"></i>
+              </li>
+            </ul>
+          </div>
 
           <div class="content-box">
             <div class="content5"></div>
