--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
        <!-- Row Section -->
     <div class="section-color3">
       <div class="container">
-        <div class="flex-container">
+        <div class="flex-container section">
   
           <!-- Section content --> 
           <div>
@@ -196,17 +196,69 @@
                 <i class="fa-solid fa-angle-down"></i>
               </li>
               <li>
-                
+                  <i class="fa-brands fa-twitter"></i>
+                  <i class="fa-brands fa-instagram spacing-logo"></i>
+                  <i class="fa-brands fa-facebook-square spacing-logo"></i>
+                  <i class="fa-brands fa-youtube spacing-logo"></i>
               </li>
             </ul>
           </div>
+          <!-- Product column -->
+            <div>
+              <ul class="col-footer">
+                <li><h3>Prodotto</h3></li>
+                <li>Scarica</li>
+                <li>Perché Discord</li>
+                <li>Nitro</li>
+                <li>Sicurezza</li>
+                <li>Assistenza</li>
+              </ul>
+            </div>
+            <!-- Company prodict -->
+            <div>
+                <div>
+                  <ul class="col-footer">
+                    <li><h3>Compagnia</h3></li>
+                    <li>Chi siamo</li>
+                    <li>Lavora con noi</li>
+                    <li>Marchio</li>
+                    <li>Redazione</li>
+                    <li>Negozio</li>
+                  </ul>
+                </div>
+            </div>
 
-          <div class="content-box">
-            <div class="content5"></div>
-            <div class="content5"></div>
-            <div class="content5"></div>
-            <div class="content5"></div>
-          </div>    
+            <div>
+              <div>
+                <ul class="col-footer">
+                  <li><h3>Risorse</h3></li>
+                  <li>Scarica</li>
+                  <li>Perchè Discord</li>
+                  <li>Nitro</li>
+                  <li>Sicurezza</li>
+                  <li>Assistenza</li>
+                  <li>Scarica</li>
+                  <li>Perchè Discord</li>
+                  <li>Nitro</li>
+                  <li>Sicurezza</li>
+                  <li>Assistenza</li>
+                </ul>
+              </div>
+          </div>
+
+          <div>
+            <div>
+              <ul class="col-footer">
+                <li><h3>Norme</h3></li>
+                <li>Scarica</li>
+                <li>Perchè Discord</li>
+                <li>Nitro</li>
+                <li>Sicurezza</li>
+                <li>Assistenza</li>
+              </ul>
+            </div>
+        </div>
+        </div>    
         </div>
       </div>
     </div>
