adding tag a to the ul

--- a/index.html
+++ b/index.html
@@ -206,24 +206,24 @@
           <!-- Product column -->
             <div>
               <ul class="col-footer">
-                <li><h3>Prodotto</h3></li>
-                <li>Scarica</li>
-                <li>Perché Discord</li>
-                <li>Nitro</li>
-                <li>Sicurezza</li>
-                <li>Assistenza</li>
+                <li><a href="#"><h3>Prodotto</h3></a></li>
+                <li><a href="#">Scarica</a></li>
+                <li><a href="#">Perché Discord</a></li>
+                <li><a href="#">Nitro</a></li>
+                <li><a href="#">Sicurezza</a></li>
+                <li><a href="#">Assistenza</a></li>
               </ul>
             </div>
             <!-- Company prodict -->
             <div>
                 <div>
                   <ul class="col-footer">
-                    <li><h3>Compagnia</h3></li>
-                    <li>Chi siamo</li>
-                    <li>Lavora con noi</li>
-                    <li>Marchio</li>
-                    <li>Redazione</li>
-                    <li>Negozio</li>
+                    <li><a href="#"><h3>Compagnia</h3></a></li>
+                    <li><a href="#">Chi siamo</a></li>
+                    <li><a href="#">Lavora con noi</a></li>
+                    <li><a href="#">Marchio</a></li>
+                    <li><a href="#">Redazione</a></li>
+                    <li><a href="#">Negozio</a></li>
                   </ul>
                 </div>
             </div>
@@ -231,17 +231,17 @@
             <div>
               <div>
                 <ul class="col-footer">
-                  <li><h3>Risorse</h3></li>
-                  <li>Scarica</li>
-                  <li>Perchè Discord</li>
-                  <li>Nitro</li>
-                  <li>Sicurezza</li>
-                  <li>Assistenza</li>
-                  <li>Scarica</li>
-                  <li>Perchè Discord</li>
-                  <li>Nitro</li>
-                  <li>Sicurezza</li>
-                  <li>Assistenza</li>
+                  <li><a href="#"><h3>Risorse</h3></a></li>
+                  <li><a href="#">Scarica</a></li>
+                  <li><a href="#">Perché Discord</a></li>
+                  <li><a href="#">Nitro</a></li>
+                  <li><a href="#">Sicurezza</a></li>
+                  <li><a href="#">Assistenza</a></li>
+                  <li><a href="#">Scarica</a></li>
+                  <li><a href="#">Perché Discord</a></li>
+                  <li><a href="#">Nitro</a></li>
+                  <li><a href="#">Sicurezza</a></li>
+                  <li><a href="#">Assistenza</a></li>
                 </ul>
               </div>
           </div>
@@ -249,12 +249,12 @@
           <div>
             <div>
               <ul class="col-footer">
-                <li><h3>Norme</h3></li>
-                <li>Scarica</li>
-                <li>Perchè Discord</li>
-                <li>Nitro</li>
-                <li>Sicurezza</li>
-                <li>Assistenza</li>
+                <li><a href="#"><h3>Norme</h3></a></li>
+                <li><a href="#">Scarica</a></li>
+                <li><a href="#">Perché Discord</a></li>
+                <li><a href="#">Nitro</a></li>
+                <li><a href="#">Sicurezza</a></li>
+                <li><a href="#">Assistenza</a></li>
               </ul>
             </div>
         </div>
