--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       <div class="container">
         <div class="flex-container section">
 
-          <!-- Section content 1 -->
+          <!-- Section content -->
           <img src="img/item1.svg" alt="image1">
           <div>
             <h2>Un luogo a invito<br> con tutto lo<br> spazio<br> necessario per<br> parlare</h2>
@@ -112,7 +112,7 @@
         <div class="container">
           <div class="flex-container section">
   
-           <!-- Section content 2 -->
+           <!-- Section content -->
             <div>
               <h2>Dove trovarsi è <br> facile</h2>
               <p>
@@ -135,7 +135,7 @@
           <div class="flex-container section">
   
             <img src="img/item3.svg" alt="image3">
-            <!-- Section content 2 -->
+            <!-- Section content -->
            <div>
             <h2>Da pochi a un <br> fandon</h2>
             <p>
@@ -178,6 +178,7 @@
       </div>
     </div>
   </main>
+  
 
   <!-- FOOTER -->
   <footer>
