align italin with flag

--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
               </li>
             </ul>
           </div>
+
           <!-- Product column -->
             <div>
               <ul class="col-footer">
@@ -215,7 +216,8 @@
                 <li><a href="#">Assistenza</a></li>
               </ul>
             </div>
-            <!-- Company prodict -->
+
+            <!-- Company column -->
             <div>
                 <div>
                   <ul class="col-footer">
@@ -229,6 +231,7 @@
                 </div>
             </div>
 
+            <!-- Resources column -->
             <div>
               <div>
                 <ul class="col-footer">
@@ -247,6 +250,7 @@
               </div>
           </div>
 
+          <!-- Law column -->
           <div>
             <div>
               <ul class="col-footer">
