ita logo correction

--- a/index.html
+++ b/index.html
@@ -192,9 +192,11 @@
             <ul class="main-footer">
               <li><h3>Il tuo posto per <br> parlare</h3></li>
               <li>
-                <img src="img/ita.png" alt="bandiera italiana">
-                <span>italiano</span>  
-                <i class="fa-solid fa-angle-down"></i>
+                <div class="flag">
+                  <img src="img/ita.png" alt="bandiera italiana">
+                  <span>italiano</span>  
+                  <i class="fa-solid fa-angle-down"></i>
+                </div>
               </li>
               <li>
                   <i class="fa-brands fa-twitter"></i>
